# sd-proxy-server

./: Cargo.toml  ENDPOINTS.md  README-openbayes.md  README-vastai.md  README.md
.github/workflows/: build.yml  release.yml
data/: req.json
src/: error.rs  handler.rs  main.rs
